Fixing sub categories grid spacing

--- a/assets/front_end/classic/scss/components/_categories-grid.scss
+++ b/assets/front_end/classic/scss/components/_categories-grid.scss
@@ -29,7 +29,7 @@
 
 .sub-categories-wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
   padding: 10px 10px 20px;
